# model_serve_template

./: Dockerfile  Makefile  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  tempo.yaml
.devcontainer/: Dockerfile  devcontainer.json
model_inference/: main.py
model_inference/api/controllers/: anomaly_detector.py
model_inference/api/routes/: sensor_anomalies.py
model_inference/application/: services.py
model_inference/common/: logger.py
model_inference/domain/: sensor.py  sensor_data.py
model_inference/domain/entities/: __init__.py
model_inference/domain/services/: __init__.py  anomaly.py
models/anomaly_detection_lstm/: autoencoder.py
models/anomaly_detector_json/1/: model.py
models/anomaly_detector_json/1/src/cli/: main.py
models/anomaly_detector_numpy/1/: model.py
models/anomaly_detector_numpy/1/src/cli/: main.py
models/anomaly_detector_numpy/1/src/model/: anomaly.py
