[project]
name = "model-serve-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bentoml>=1.4.16",
    "fastapi>=0.115.13",
    "hypercorn>=0.17.3",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "pydantic>=2.11.7",
    "ruff>=0.12.0",
    "uvicorn>=0.34.3",
]
